syntax = "proto3";

service AuditConf {
    rpc Create(Request) returns (Response) {}
    rpc Update(Request) returns (Response) {}
    rpc Show(Request) returns (Response) {}
    rpc Index(Request) returns (Response) {}
}

message Request {
    int32   id = 9;
    string name = 1;
    string type = 2;
    string value = 3;
    string create_time = 4;
    string update_time = 5;
    int32  is_delete = 6;
}

message Response {
    message Notify {
        int32   id = 9;
        string name = 1;
        string type = 2;
        string value = 3;
        string create_time = 4;
        string update_time = 5;
        int32 is_delete = 6;
    }
    repeated Notify data = 12;
    int32 affectedRows = 99;
}

